{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 464,
  "lineage": "422f99c3-bf2d-c5e1-eeb7-4a7088c3a624",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:050485243139:subnet/subnet-04c69119e3bfe7a6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-04c69119e3bfe7a6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050485243139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "vpc_id": "vpc-0435a7a20cbf7e239"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:050485243139:subnet/subnet-0d3a06fc966d1c31d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d3a06fc966d1c31d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050485243139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "vpc_id": "vpc-0435a7a20cbf7e239"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:050485243139:vpc/vpc-0435a7a20cbf7e239",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-05d379ca53827da48",
            "default_route_table_id": "rtb-03f225bd762be9d81",
            "default_security_group_id": "sg-0d515b156d7b28f95",
            "dhcp_options_id": "dopt-094061bd50ecc6844",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0435a7a20cbf7e239",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f225bd762be9d81",
            "owner_id": "050485243139",
            "tags_all": {
              "Author": "Ubiratan Júnior"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06205847307e9f474",
            "arn": "arn:aws:ec2:sa-east-1:050485243139:instance/i-0b6465c5e443ab2d8",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceRole",
            "id": "i-0b6465c5e443ab2d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ngninx-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0924dcbd6fbec78a1"
              }
            ],
            "primary_network_interface_id": "eni-0924dcbd6fbec78a1",
            "private_dns": "ip-172-31-1-15.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.15",
            "public_dns": "ec2-18-231-107-39.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.107.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067584d70cbd6258d",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ecs_instance_acess"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c69119e3bfe7a6d",
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0400692a129e535a2"
            ]
          },
          "dependencies": [
            "aws_default_subnet.subnet_a",
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.instance_role",
            "aws_network_interface.interface",
            "aws_security_group.sg",
            "data.aws_iam_policy_document.instance_policy",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:loadbalancer/app/ngnix-load-balancer/911c07a8e889bbe8",
            "arn_suffix": "app/ngnix-load-balancer/911c07a8e889bbe8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ngnix-load-balancer-1062241440.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:loadbalancer/app/ngnix-load-balancer/911c07a8e889bbe8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ngnix-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0400692a129e535a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c69119e3bfe7a6d"
              },
              {
                "subnet_id": "subnet-0d3a06fc966d1c31d"
              }
            ],
            "subnets": [
              "subnet-04c69119e3bfe7a6d",
              "subnet-0d3a06fc966d1c31d"
            ],
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "vpc_id": "vpc-0435a7a20cbf7e239",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_default_subnet.subnet_a",
            "aws_default_subnet.subnet_b",
            "aws_default_vpc.default",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:listener/app/ngnix-load-balancer/911c07a8e889bbe8/c9154b386a5b4267",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:targetgroup/ngnix-target-group/2411b03c421eb506",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:listener/app/ngnix-load-balancer/911c07a8e889bbe8/c9154b386a5b4267",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:loadbalancer/app/ngnix-load-balancer/911c07a8e889bbe8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.subnet_a",
            "aws_default_subnet.subnet_b",
            "aws_default_vpc.default",
            "aws_lb.loadbalancer",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:targetgroup/ngnix-target-group/2411b03c421eb506",
            "arn_suffix": "targetgroup/ngnix-target-group/2411b03c421eb506",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:targetgroup/ngnix-target-group/2411b03c421eb506",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ngnix-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0435a7a20cbf7e239"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:targetgroup/ngnix-target-group/2411b03c421eb506-20220826022338627900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:050485243139:targetgroup/ngnix-target-group/2411b03c421eb506",
            "target_id": "i-0b6465c5e443ab2d8"
          },
          "dependencies": [
            "aws_default_subnet.subnet_a",
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.instance_role",
            "aws_instance.ec2",
            "aws_lb_target_group.lb_target_group",
            "aws_network_interface.interface",
            "aws_security_group.sg",
            "data.aws_iam_policy_document.instance_policy",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:050485243139:network-interface/eni-0924dcbd6fbec78a1",
            "attachment": [
              {
                "attachment_id": "eni-attach-08ca5256a62807501",
                "device_index": 0,
                "instance": "i-0b6465c5e443ab2d8"
              }
            ],
            "id": "eni-0924dcbd6fbec78a1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:91:4e:86:0a:fe",
            "owner_id": "050485243139",
            "private_dns_name": "ip-172-31-1-15.sa-east-1.compute.internal",
            "private_ip": "172.31.1.15",
            "private_ip_list": [
              "172.31.1.15"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.1.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0400692a129e535a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c69119e3bfe7a6d",
            "tags_all": {
              "Author": "Ubiratan Júnior"
            }
          },
          "dependencies": [
            "aws_default_subnet.subnet_a",
            "aws_default_vpc.default",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:050485243139:security-group/sg-0400692a129e535a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0400692a129e535a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ecs_instance_acess",
            "name_prefix": "",
            "owner_id": "050485243139",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Author": "Ubiratan Júnior"
            },
            "timeouts": null,
            "vpc_id": "vpc-0435a7a20cbf7e239"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}